--- a/sopaletras.html
+++ b/sopaletras.html
@@ -492,7 +492,7 @@
 
 	</form>
 	<br>
-	
+	<div><li><a href="index.html" target="_blank">regresar a la pagian principal</a></li></div>
 	<script src="sopaLetras.js"></script>
 </body>
 </html>
