--- a/sopaletras.html
+++ b/sopaletras.html
@@ -7,11 +7,11 @@
 	<h1><i> sopa de Letras</i> </h1>
 		<h3>Palabras a encontrar:</h3>
 			<ul>
-				<li>JAVASCRIPT,HTML,FIGMA</li>
-				<li>PHP,TITLE,BACKGROUND</li>
-				<li>LENGUAJE,ESTILO,BODY,COLOR</li>
-				<li>DIV,IMAGE,HTPP,GITHUB</li>
-				<li>CSS,CONTENT,TABLE,UL,OL,LI</li>
+				<li>JAVASCRIPT--HTML--FIGMA</li>
+				<li>PHP--TITLE--BACKGROUND</li>
+				<li>LENGUAJE--ESTILO--BODY--COLOR</li>
+				<li>DIV--IMAGE--HTPP--GITHUB</li>
+				<li>CSS--CONTENT--TABLE--UL--OL--LI</li>
 			</ul>
 	<form id= "espacio">
 		<table border="2px" bordercolor="#050430" bgcolor="#e2dee1">
