--- a/DOM/DOM.HTML
+++ b/DOM/DOM.HTML
@@ -38,6 +38,8 @@
 
    <footer>
        <p>referecia https://www.w3.org/2005/03/DOM3Core-es/introduccion.html</p>
+       <a href="https://majaramillom.neocities.org">regresar</a>
+ 
    </footer>
 
   
