--- a/Landing page/landingpage.html
+++ b/Landing page/landingpage.html
@@ -34,6 +34,7 @@
 
     <footer>
         <p>referecia https://www.rdstation.com/es/blog/landing-page/ y https://rockcontent.com/es/blog/landing-page/</p>
+        <a href="https://majaramillom.neocities.org">regresar</a>
     </footer>
 
 
