--- a/sopa/sopaletras.html
+++ b/sopa/sopaletras.html
@@ -495,7 +495,10 @@
 	</form>
 	<br>
 
-	<script src="sopaLetras.js"></script>
+	 <footer>
+      
+       <a href="https://majaramillom.neocities.org">regresar</a>
+   </footer>
 </body>
 
 </html>
