--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -22,7 +22,7 @@
             <p>TALLERES</p>
         </div>
         <ul>
-            <li><a href="Hv.html" target="_blank">taller 1 hoja de vida</a></li>
+            <li><a href="https://majaramillom.neocities.org/HV/Hv.html" >hoja de vida</a></li>
             <li><a href="https://www.figma.com/file/vZyQsS4EwVDvneF2A0AqwP/hoja-de-vida?node-id=1%3A4" target="_blank">taller 2 figma</a></li>
             <li>Taller3</li>
             <li>Taller4</li>
@@ -45,7 +45,7 @@
             <p>RETOS</p>
         </div>
         <ul>
-            <li><a href="sopaletras.html" target="_blank">reto 1 sopa de letras</a></li>
+            <li><a href="sopaletras.html">sopa de letras</a></li>
             <li>Flash Cards </li>
             <li>Carrito de compras</li>
             <li>Reto4</li>
