--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -10,7 +10,7 @@
     <section>
         <header>
             <div>
-                <p>MIGUEL ANGEL JARAMILLO MORALES</p>
+                <p>MIGUEL ANGEL JARAMILLO </p>
             </div>
             <img src="FOTO.jpg" alt="" width="150 px" height="150 px">
         </header>
@@ -45,9 +45,9 @@
             <p>RETOS</p>
         </div>
         <ul>
-            <li><a href="sopaletras.html">sopa de letras</a></li>
-            <li>Flash Cards </li>
-            <li>Carrito de compras</li>
+            <li><a href="https://majaramillom.neocities.org/sopa/sopaletras.html" >sopa de letras</a></li>
+            <li><a href="https://majaramillom.neocities.org/flashcards/flashcars.html" >Flashcards</a></li>
+            <li><a href="https://majaramillom.neocities.org/carrito/carrito.html" >Carrito de compras</li>
             <li>Reto4</li>
         </ul>
         
