--- a/conferencia/index.html
+++ b/conferencia/index.html
@@ -30,11 +30,9 @@
         <div class="iniciosesion">
             <section class="is-content">
                 <h1>Plataforma de conferencia en vivo sin limite de uso</h1>
-                <button type="button" data-toggle="modal" data-target="#singUpModal">
-                    Registro
-                </button>
+                <button><a href="registro.html">Registro</a></button>
                 <p></p>
-                <button>Inicio Sesion</button>
+                <button><a href="">Iniciar</a></button>
             </section>
         </div>
 
